#76 Fixed featured content alignment in home page

--- a/core/static/css/v2/pages/home/home-page.less
+++ b/core/static/css/v2/pages/home/home-page.less
@@ -629,7 +629,9 @@
               .font-size(18);
             }
         }
-
+        h1, .featured-content-title {
+          padding: 15px 0;
+        }
        &.item-container {
          margin: 0 auto;
          h1, h4 {
